change logig behind vocabularies